# noinst = no install, on peut utiliser bin_PROGRAMS sinon
noinst_PROGRAMS = exo1

INC_DIR = $(top_builddir)/include
SRC_DIR = $(top_builddir)/src

# Flags to compiler
AM_CPPFLAGS =  -I $(INC_DIR) -g -Wall -std=c++1y

# global LDFLAG  = Linker flags
# AM_LDFLAGS = -pthread 


exo1_SOURCES = List.h List.cpp main.cpp

